# Bluff3D

./: .gitignore  CMakeLists.txt  README.TXT  license.txt
game/: App.h  CMakeLists.txt  Demo.cpp  Demo.h  Project.vcproj  interface.cpp  interface.h  main.cpp
source/: CMakeLists.txt  Debug.dsp  Doxyfile  GLG3D.dsp  doc.dsp  g3ddocs.tag  graphics3D.dsp  graphics3D.dsw
source/G3Dcpp/: AABox.cpp  AnyVal.cpp  BinaryFormat.cpp  BinaryInput.cpp  BinaryOutput.cpp  Box.cpp  CMakeLists.txt  Capsule.cpp  CollisionDetection.cpp  Color3.cpp  Color3uint8.cpp  Color4.cpp  Color4uint8.cpp  Cone.cpp  ConvexPolyhedron.cpp  CoordinateFrame.cpp  Crypto.cpp  Crypto_md5.cpp  Cylinder.cpp  Discovery.cpp  GCamera.cpp  GImage.cpp  GImage_bayer.cpp  GImage_bmp.cpp  GImage_jpeg.cpp  GImage_png.cpp  GImage_ppm.cpp  GImage_tga.cpp  GLight.cpp  GThread.cpp  Line.cpp  LineSegment.cpp  Log.cpp  Matrix3.cpp  Matrix4.cpp  MeshAlg.cpp  MeshAlgAdjacency.cpp  MeshAlgWeld.cpp  MeshBuilder.cpp  NetAddress.cpp  (+25 more)
source/GLG3Dcpp/: CMakeLists.txt  DDSTexture.cpp  DXCaps.cpp  Draw.cpp  Framebuffer.cpp  G3DGameUnits.cpp  GApp.cpp  GFont.cpp  GLCaps.cpp  GModule.cpp  GPUProgram.cpp  GWindow.cpp  IFSModel.cpp  LightingParameters.cpp  MD2Model.cpp  MD2Model_load.cpp  ManualCameraController.cpp  Milestone.cpp  PixelProgram.cpp  PosedModel.cpp  RenderDevice.cpp  Renderbuffer.cpp  SDLWindow.cpp  Shader.cpp  Shape.cpp  Sky.cpp  Texture.cpp  TextureFormat.cpp  TextureManager.cpp  ThirdPersonManipulator.cpp  UserInput.cpp  VAR.cpp  VARArea.cpp  VertexProgram.cpp  Win32Window.cpp  directinput8.h  edgeFeatures.cpp  getOpenGLState.cpp  glcalls.cpp  glenumtostring.cpp  (+2 more)
source/contrib/AVI/: AVI.cpp  AVI.h
source/contrib/ArticulatedModel/: ArticulatedModel.cpp  ArticulatedModel.h  ArticulatedModel_pose.cpp  Load3DS.h  NonShadowedPass.glsl.frg  NonShadowedPass.glsl.vrt  ShadowMappedLightPass.glsl.frg  ShadowMappedLightPass.glsl.vrt  SuperShader.cpp  SuperShader.h  ToneMap.cpp  ToneMap.h
source/contrib/BigInt/: BigInt.cpp  BigInt.h  test.cpp
source/contrib/Console/: GConsole.cpp  GConsole.h  main.cpp
source/contrib/CoreyGWindow/: QGWindow.cpp  QGWindow.h  RenderWindow.cpp  RenderWindow.h
source/contrib/CurveEditor/: App.cpp  App.h  CurveEditor.dsp  CurveEditor.dsw  Editor.cpp  Editor.h  main.cpp
source/contrib/DrawLogo/: DrawLogo.dsp  DrawLogo.dsw  main.cpp
source/contrib/EulerFrame/: EulerFrame.h
source/contrib/GChunk/: GChunk.h
source/contrib/GlutWindow/: GlutWindow.cpp  GlutWindow.h
source/contrib/IFSBuilder/: IFSBuilder.dsp  IFSBuilder.dsw  IFSModel.cpp  IFSModel.h  Load3DS.h  MD2.h  main.cpp  wildcard.cpp
source/contrib/Image/: Image.h
source/contrib/Matrix/: Matrix.cpp  Matrix.h
source/contrib/ObjModel/: ObjModel.cpp  ObjModel.h  ObjModel_load.cpp
source/contrib/Q3Map/: BSP.dsp  BSP.dsw  BSPMAP.cpp  BSPMAP.h  BSPMAPLoad.cpp  main.cpp
source/contrib/VideoSerializer/: VideoSerializer.cpp  VideoSerializer.h
source/contrib/Webcam/: VideoCapture.cpp  VideoCapture.h  main.cpp
source/contrib/ode/: odeHelper.cpp  odeHelper.h
source/contrib/pingtest/: main.cpp  pingtest.dsp  pingtest.dsw
source/contrib/wxGWindow/: demo.cpp  wxGWindow.cpp  wxGWindow.h
source/demos/: main-no-GApp.cpp  main.cpp
source/demos/ASM_Shader_Demo/: ASM_Shader_Demo.dsp  ASM_Shader_Demo.dsw  main.cpp
source/demos/Cg_Shader_Demo/: Cg_Shader_Demo.dsp  Cg_Shader_Demo.dsw  Mesh.h  main.cpp
source/demos/Collision_Demo/: Collision_Demo.dsp  Demo.h  Model.cpp  Model.h  Object.cpp  Object.h  Scene.cpp  Scene.h  buildScene.cpp  main.cpp
source/demos/GLSL_Demo/: GLSL_Demo.dsp  GLSL_Demo.dsw  Mesh.cpp  Viewer.cpp  header.h  main.cpp
source/demos/MD2Model_Demo/: main.cpp  md2.dsp
source/demos/Network_Demo/: App.h  Browse.cpp  Browse.h  Client.cpp  Client.h  Entity.cpp  Entity.h  Game.h  Model.cpp  Model.h  Network_Demo.dsp  Server.cpp  Server.h  ServerAd.cpp  ServerAd.h  main.cpp  messages.cpp  messages.h
source/demos/VAR_Demo/: VAR_Demo.dsp  VAR_Demo.dsw  main.cpp
source/demos/Win32_Demo/: Win32_Demo.dsp  Window.cpp  Window.h  main.cpp
source/docsource/: changelog.dox  contributors.dox
source/gfxmeter/: App.h  CMakeLists.txt  Report.cpp  Report.h  gfxmeter.dsp  main.cpp  measureVertexPerformance.cpp  shaderVersions.cpp  speed.cpp
source/html/: build-instructions.html  error.html  footer.html  gettingstarted.html  header.html  online_footer.html  online_header.html  stylesheet.css
source/imgui/: CMakeLists.txt
source/include/: G3DAll.h  GLG3D.h  graphics3D.h
source/include/G3D/: AABSPTree.h  AABox.h  AnyVal.h  Array.h  AtomicInt32.h  BinaryFormat.h  BinaryInput.h  BinaryOutput.h  Box.h  Capsule.h  CollisionDetection.h  Color3.h  Color3.inl  Color3uint8.h  Color4.h  Color4.inl  Color4uint8.h  Cone.h  ConvexPolyhedron.h  CoordinateFrame.h  Crypto.h  Cylinder.h  Discovery.h  G3DGameUnits.h  GCamera.h  GImage.h  GLight.h  GThread.h  Line.h  LineSegment.h  Log.h  Matrix3.h  Matrix4.h  MeshAlg.h  MeshBuilder.h  NetAddress.h  NetworkDevice.h  PhysicsFrame.h  Plane.h  Quat.h  (+34 more)
source/include/GL/: gl.h  glext.h  glut.h  glx.h  glxext.h  glxtokens.h  wglext.h
source/include/GLG3D/: DXCaps.h  Draw.h  Framebuffer.h  GApp.h  GFont.h  GLCaps.h  GModule.h  GPUProgram.h  GWindow.h  GWindowSettings.h  IFSModel.h  LightingParameters.h  MD2Model.h  ManualCameraController.h  Milestone.h  PixelProgram.h  PosedModel.h  RenderDevice.h  Renderbuffer.h  SDLWindow.h  Shader.h  Shape.h  Sky.h  Texture.h  TextureFormat.h  TextureManager.h  ThirdPersonManipulator.h  UserInput.h  VAR.h  VARArea.h  VertexProgram.h  Win32Window.h  X11Window.h  edgeFeatures.h  getOpenGLState.h  glFormat.h  glcalls.h  glheaders.h  shadowVolume.h  tesselate.h
source/test/: main.cpp  tAABSPTree.cpp  tAABox.cpp  tArray.cpp  tAtomicInt32.cpp  tBinaryIO.cpp  tCollisionDetection.cpp  tGChunk.cpp  tGThread.cpp  tMatrix.cpp  tMatrix3.cpp  tMeshAlgAdjacency.cpp  tMeshAlgTangentSpace.cpp  tQuat.cpp  tQueue.cpp  tRandom.cpp  tReferenceCount.cpp  tReliableConduit.cpp  tSystemMemcpy.cpp  tSystemMemset.cpp  tTable.cpp  tTextInput.cpp  tTextOutput.cpp  test.dsp
(+46 files in other folders)
